* Fixed some layout issues here and there. * Fixed wrong link to filetypes workshop.
git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27932 a95241bf-73f2-0310-859d-f6bbb57e9c96

--- a/docs/welcome/welcome.css
+++ b/docs/welcome/welcome.css
@@ -39,6 +39,14 @@ h2 a:hover, a:active {
 	text-decoration: none;
 	color: #0c3762;
 }
+h3 a:hover, a:active {
+	text-decoration: none;
+	color: #222;
+}
+h4 a:hover, a:active {
+	text-decoration: none;
+	color: #000;
+}
 
 /* basic text elements */
 
